# algo-trader

./: .gitignore  .pylintrc  README.md  app.py  docker-compose.local.yml  docker-compose.prod.yml  main.py  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: api.yml  ci.yml  strategy_service.yml
api/: Dockerfile  go.mod  main.go
api/handlers/: bots.go  candles.go  trades.go
api/internal/models/: bot.go  candle.go  trade.go
api/setup/: config.go  db.go  server.go  setup.go
app/core/: config.py
app/factories/: db.py
app/utils/: types.py
dashboard/: .gitignore  .prettierignore  Dockerfile.prod  main.tsx  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/api/: bots.ts  index.ts  trades.ts
dashboard/src/components/: BotsOverview.tsx  (+4 more)
research/: Dockerfile.local  README.md  requirements.txt
research/scripts/: dev-check.sh
src/: logger.py  settings.py  trading_bot.py
src/alpaca/: account.py  client.py
src/strategies/: simple_strategy.py  trading_strategy.py
src/utils/: __init__.py  constants.py  settings.py
strategy-service/: .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  README.md  app.py  pyproject.toml  requirements.txt
strategy-service/app/: main.py
strategy-service/scripts/: dev-check.sh
strategy-service/tests/: test_placeholder.py
tests/: conftest.py
trader-core/: .air.toml  .gitignore  Dockerfile.local  README.md  go.mod  go.sum
trader-core/setup/: config.go  db.go  server.go
(+42 files in other folders)
