[project]
name = "algo-trader"
version = "0.1.0"
description = "Algorithmic trading bot prototype"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "I"]  # Errors, pyflakes, bugbear, isort
ignore = ["E501"]  # Let Black handle line length

[tool.mypy]
python_version = "3.13"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
